@@ -415,6 +415,7 @@
                     <param name="id" value="$PARAM[id]" />
                     <param name="label" value="$PARAM[label]" />
                     <param name="content" value="$PARAM[content]" />
+                    <param name="widgetContent" value="$PARAM[widgetContent]" />
                 </include>
                 <control type="group">
                     <top>655</top>
@@ -434,7 +435,9 @@
                     <param name="id" value="$PARAM[id]" />
                     <param name="target" value="$PARAM[target]" />
                     <param name="content" value="$PARAM[content]" />
+                    <param name="widgetContent" value="$PARAM[widgetContent]" />
                     <param name="aspect" value="$PARAM[aspect]" />
+                    <param name="widgetAspect" value="$PARAM[widgetAspect]" />
                     <param name="submenu" value="$PARAM[submenu]" />
                     <param name="sortby" value="$PARAM[sortby]" />
                     <param name="sortorder" value="$PARAM[sortorder]" />
@@ -443,7 +446,9 @@
                     <param name="id" value="$PARAM[id]" />
                     <param name="target" value="$PARAM[target]" />
                     <param name="content" value="$PARAM[content]" />
+                    <param name="widgetContent" value="$PARAM[widgetContent]" />
                     <param name="aspect" value="$PARAM[aspect]" />
+                    <param name="widgetAspect" value="$PARAM[widgetAspect]" />
                     <param name="submenu" value="$PARAM[submenu]" />
                     <param name="sortby" value="$PARAM[sortby]" />
                     <param name="sortorder" value="$PARAM[sortorder]" />
@@ -474,8 +479,15 @@
                 <control type="label">
                     <left>2</left>
                     <textcolor>main_fg_100</textcolor>
-                    <label>$PARAM[label]$INFO[Container($PARAM[id]).ListItem.Property(similartitle), $LOCALIZE[19160] ,]</label>
+                    <label>$PARAM[label]</label>
                     <include>Statusbar_Menubar_Items</include>
+                </control>
+                <control type="label">
+                    <left>-16</left>
+                    <textcolor>main_fg_100</textcolor>
+                    <label>$INFO[Container($PARAM[id]).ListItem.Property(similartitle), $LOCALIZE[19160] ,]</label>
+                    <include>Statusbar_Menubar_Items</include>
+                    <visible>!String.IsEmpty(Container($PARAM[id]).ListItem.Property(similartitle))</visible>
                 </control>
                 <control type="image">
                     <texture colordiffuse="$VAR[ColorHighlight]">common/white.png</texture>
@@ -520,6 +532,7 @@
         <include content="Widget_Movement">
             <param name="id" value="$PARAM[id]" />
             <param name="aspect" value="$PARAM[aspect]" />
+            <param name="widgetAspect" value="$PARAM[widgetAspect]" />
             <param name="submenu" value="$PARAM[submenu]" />
         </include>
         <orientation>horizontal</orientation>
@@ -539,6 +552,7 @@
                 <param name="height" value="$PARAM[height]" />
                 <param name="id" value="$PARAM[id]" />
                 <param name="aspect" value="$PARAM[aspect]" />
+                <param name="widgetAspect" value="$PARAM[widgetAspect]" />
                 <param name="submenu" value="$PARAM[submenu]" />
             </include>
 
@@ -569,6 +583,7 @@
                 <param name="height" value="$PARAM[height]" />
                 <param name="id" value="$PARAM[id]" />
                 <param name="aspect" value="$PARAM[aspect]" />
+                <param name="widgetAspect" value="$PARAM[widgetAspect]" />
                 <param name="submenu" value="$PARAM[submenu]" />
             </include>
 
@@ -653,6 +668,7 @@
                 <param name="target" value="$PARAM[target]" />
                 <param name="sortby" value="$PARAM[sortby]" />
                 <param name="sortorder" value="$PARAM[sortorder]" />
+                <param name="widgetContent" value="$PARAM[widgetContent]" />
                 <param name="content" value="$PARAM[content]" />
                 <param name="limit" value="$VAR[Label_WidgetItemLimit]" />
             </include>
@@ -660,7 +676,7 @@
     </include>
 
     <include name="Widget_ContentInclude">
-        <content target="$PARAM[target]" sortby="$PARAM[sortby]" sortorder="$PARAM[sortorder]" limit="$PARAM[limit]">$INFO[$PARAM[content]]</content>
+        <content target="$PARAM[target]" sortby="$PARAM[sortby]" sortorder="$PARAM[sortorder]" limit="$PARAM[limit]">$PARAM[widgetContent]</content>
     </include>
 
     <include name="Widget_Submenu_ItemLayout">
