@@ -567,7 +567,9 @@
         <node label="32020">
             <content>picturesources</content>
         </node>
-        
+        <!-- <shortcut label="$LOCALIZE[31182]" type="32010" condition="System.HasAddon(script.skin.helper.service)">||BROWSE||script.skin.helper.service/?action=widgets&amp;path=skinplaylists,librarydataprovider,scriptwidgets,smartshortcuts,pvr</shortcut>
+
+        <shortcut label="32107" type="32010" condition="!System.HasAddon(script.skin.helper.service)">::INSTALL::script.skin.helper.service</shortcut> -->
         
     </widget-groupings>
 
