@@ -1,3 +1,6 @@
+[B]0.9.10[/B]
+Hopeful fix for widgets bug
+
 [B]0.9.9[/B]
 Add FPS icon and indicator on videoosd info
 Add trailer/extras fake fullscreen from info
